# base-gpui

./: Cargo.toml  LICENSE  README.md
docs/components/: README.md  accordion.md  alert_dialog.md  autocomplete.md  avatar.md  button.md  checkbox.md  checkbox_group.md  collapsible.md  combobox.md  context_menu.md  dialog.md  drawer.md  field.md  fieldset.md  form.md  input.md  menu.md  menubar.md  meter.md  navigation_menu.md  number_field.md  otp_field.md  popover.md  preview_card.md  progress.md  radio_group.md  scroll_area.md  select.md  separator.md  slider.md  switch.md  tabs.md  toast.md  toggle.md  toggle_group.md  toolbar.md  tooltip.md
scripts/: generate-component-docs.mjs
